--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="js/scripts.js" defer></script>
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <style>
-
+    
         @import url('https://fonts.googleapis.com/css2?family=Vazir&display=swap');
 
         body {
@@ -326,6 +326,89 @@
     </div>
 
     <script>
+function updateNavButtonColors() {
+    const navCircles = document.querySelectorAll('.nav-circle');
+    const bodyBackgroundColor = getComputedStyle(document.body).backgroundColor;
+
+    const rgbToHex = (rgb) => {
+        const rgbArray = rgb.match(/\d+/g);
+        return `#${((1 << 24) + (parseInt(rgbArray[0]) << 16) + (parseInt(rgbArray[1]) << 8) + parseInt(rgbArray[2])).toString(16).slice(1)}`;
+    };
+
+    const backgroundColorHex = rgbToHex(bodyBackgroundColor);
+
+    if (backgroundColorHex === '#ffffff') { // اگر پس‌زمینه سفید باشد
+        navCircles.forEach(circle => {
+            circle.style.backgroundColor = '#000'; // دکمه‌ها سیاه
+            circle.style.color = '#fff'; // متن دکمه‌ها سفید
+        });
+    } else { // اگر پس‌زمینه تیره باشد
+        navCircles.forEach(circle => {
+            circle.style.backgroundColor = 'rgba(255, 255, 255, 0.4)'; // دکمه‌ها سفید شفاف
+            circle.style.color = '#000'; // متن دکمه‌ها سیاه
+        });
+    }
+}
+
+// فراخوانی تابع هنگام بارگذاری صفحه و اسکرول
+window.onload = updateNavButtonColors;
+window.onscroll = updateNavButtonColors;
+
+const welcomeTexts = [
+    "خوش آمدید به دنیای شگفت‌انگیز آب معدنی Abadis!",
+    "با ما تجربه‌ای تازه و دلپذیر از آب معدنی داشته باشید.",
+    "آب معدنی ما، طعمی خنک و نشاط‌آور برای سلامتی شماست.",
+    "انتخاب آب معدنی Abadis، انتخابی سالم و طبیعی برای خانواده شما!"
+];
+
+const contentTexts = [
+    "آب معدنی ما از چشمه‌های زلال و خالص سرچشمه می‌گیرد.",
+    "سلامت شما برای ما در اولویت است، پس با ما همراه باشید.",
+    "محصولات ما با کیفیت عالی و استانداردهای بین‌المللی تولید می‌شوند.",
+    "به آب معدنی Abadis خوش آمدید؛ جایی که کیفیت و سلامت دست به دست هم می‌دهند!"
+];
+
+let currentIndex = 0;
+
+function typeWriter(text, element, delay) {
+    let i = 0;
+    element.innerText = "";
+    const interval = setInterval(() => {
+        if (i < text.length) {
+            element.innerText += text.charAt(i);
+            i++;
+        } else {
+            clearInterval(interval);
+        }
+    }, delay);
+}
+
+function changeTexts() {
+    currentIndex = (currentIndex + 1) % welcomeTexts.length;
+    typeWriter(welcomeTexts[currentIndex], document.getElementById("welcome-text"), 100);
+    typeWriter(contentTexts[currentIndex], document.getElementById("dynamic-text"), 100);
+}
+
+function showContent() {
+    document.getElementById("contentSection").style.opacity = 1;
+    document.getElementById("contentSection").style.transform = "translateY(0)";
+}
+
+function showBlog() {
+    document.getElementById("blogSection").style.opacity = 1;
+    document.getElementById("blogSection").style.transform = "translateY(0)";
+}
+
+function scrollToSection(sectionId) {
+    const section = document.getElementById(sectionId);
+    section.scrollIntoView({ behavior: 'smooth' });
+}
+
+setInterval(changeTexts, 8000);
+changeTexts();
+
+setTimeout(showContent, 500); // Show content section
+setTimeout(showBlog, 2000); // Show blog section
         function scrollToSection(sectionId) {
             const section = document.getElementById(sectionId);
             section.scrollIntoView({ behavior: 'smooth' });
