--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="آب معدنی Abadis - بهترین کیفیت و طعم طبیعی در هر بطری.">
     <meta name="keywords" content="آب معدنی, Abadis, آب, نوشیدنی, طبیعی">
     <title>آب معدنی Abadis</title>
+    <html lang="fa" dir="rtl">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
