--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- index.html -->
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="fa">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +16,7 @@
 </head>
 <body>
     <div class="banner-container">
-        <div class="banner" id="banner1">
+        <div class="banner" id="banner">
             <video autoplay loop muted>
                 <source src="img/abadis-factory.mp4" type="video/mp4">
                 مرورگر شما از ویدیو پشتیبانی نمی‌کند.
@@ -31,38 +30,41 @@
     </div>
 
     <div class="content-wrapper">
-        <div class="content-section" id="contentSection1">
-            <div class="dynamic-content">
-                <div class="text">
-                    <h2>دشت دیمه</h2>
-                    <p>
-                        دشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شوند. دشت دیمه یکی از دشت‌های زیبا و سرسبز این منطقه است که معمولاً در فصل‌های بهار و تابستان پر از گل‌های وحشی و چمن‌زارهای سرسبز می‌شود. این دشت به دلیل موقعیت جغرافیایی‌اش، محیطی مناسب برای گردشگران و طبیعت‌دوستان فراهم می‌آورد.
-                    </p>
-                </div>
-                <img class="scrolling-gif" src="img/Bottle-Dew.gif" alt="GIF" id="bottleGif" loading="lazy">
+    <section class="content-section" id="contentSection1">
+        <div class="dynamic-content">
+            <div class="text">
+                <h2>دشت دیمه</h2>
+                <p>دشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شوند. دشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شوندشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شون.</p>
+                <img src="img/img_1.png" alt="Image 1" loading="lazy">
             </div>
         </div>
+    </section>
 
-        <div class="content-section" id="contentSection2">
-            <div class="dynamic-content">
-                <div class="text">
-                    <h2>متن بخش دوم</h2>
-                    <p>این بخش شامل توضیحات بیشتری درباره کیفیت محصولات ماست.</p>
-                </div>
-            </div>
+    <section class="content-section" id="contentSection2">
+        <div class="dynamic-content">
+          <div class="text">
+              <h2>دشت دیمه</h2>
+              <p>دشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شوند. دشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شوندشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شون.</p>
+          </div>
         </div>
+    </section>
 
-        <div class="content-section" id="contentSection3">
-            <div class="dynamic-content">
-                <div class="text">
-                    <h2>سوالات متداول</h2>
-                    <p>در این بخش به سوالات متداول مشتریان پاسخ داده می‌شود. اگر سوالی دارید، می‌توانید با ما تماس بگیرید.</p>
-                </div>
-            </div>
+    <section class="content-section" id="contentSection3">
+        <div class="dynamic-content">
+          <div class="text">
+              <h2>دشت دیمه</h2>
+              <p>دشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شوند. دشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شوندشت دیمه و منطقه کوهرنگ در استان چهارمحال و بختیاری واقع شده‌اند و به خاطر زیبایی‌های طبیعی و آب و هوای خاص‌شان شناخته می‌شون.</p>
+          </div>
         </div>
-    </div>
-
-    <div class="products" id="productsSection">
+    </section>
+    <section class="content-section" id="productsSection">
+        <div class="dynamic-content">
+          <div class="text">
+              <h2>محصول‌ها</h2>
+          </div>
+        </div>
+    </section>
+    <div class="products">
         <div class="product">
             <img src="img/product_1.png" alt="Bottle 1" loading="lazy">
         </div>
@@ -79,8 +81,73 @@
             <img src="img/product_5.png" alt="Bottle 5" loading="lazy">
         </div>
     </div>
+</div>
 
     <div class="blog" id="blogSection">
+        <div class="blog-tile">
+            <img src="img/blog_1.png" alt="Blog 1" loading="lazy">
+            <div class="blog-info">
+                <h2>عنوان بلاگ ۱</h2>
+                <p>توضیح کوتاهی درباره این مطلب.</p>
+            </div>
+        </div>
+        <div class="blog-tile">
+            <img src="img/blog_2.png" alt="Blog 2" loading="lazy">
+            <div class="blog-info">
+                <h2>عنوان بلاگ ۲</h2>
+                <p>توضیح کوتاهی درباره این مطلب.</p>
+            </div>
+        </div>
+        <div class="blog-tile">
+            <img src="img/blog_3.png" alt="Blog 3" loading="lazy">
+            <div class="blog-info">
+                <h2>عنوان بلاگ ۳</h2>
+                <p>توضیح کوتاهی درباره این مطلب.</p>
+            </div>
+        </div>
+        <div class="blog-tile">
+            <img src="img/blog_1.png" alt="Blog 1" loading="lazy">
+            <div class="blog-info">
+                <h2>عنوان بلاگ ۱</h2>
+                <p>توضیح کوتاهی درباره این مطلب.</p>
+            </div>
+        </div>
+
+        <div class="blog-tile">
+            <img src="img/blog_2.png" alt="Blog 2" loading="lazy">
+            <div class="blog-info">
+                <h2>عنوان بلاگ ۲</h2>
+                <p>توضیح کوتاهی درباره این مطلب.</p>
+            </div>
+        </div>
+        <div class="blog-tile">
+            <img src="img/blog_3.png" alt="Blog 3" loading="lazy">
+            <div class="blog-info">
+                <h2>عنوان بلاگ ۳</h2>
+                <p>توضیح کوتاهی درباره این مطلب.</p>
+            </div>
+        </div>
+        <div class="blog-tile">
+            <img src="img/blog_1.png" alt="Blog 1" loading="lazy">
+            <div class="blog-info">
+                <h2>عنوان بلاگ ۱</h2>
+                <p>توضیح کوتاهی درباره این مطلب.</p>
+            </div>
+        </div>
+        <div class="blog-tile">
+            <img src="img/blog_2.png" alt="Blog 2" loading="lazy">
+            <div class="blog-info">
+                <h2>عنوان بلاگ ۲</h2>
+                <p>توضیح کوتاهی درباره این مطلب.</p>
+            </div>
+        </div>
+        <div class="blog-tile">
+            <img src="img/blog_3.png" alt="Blog 3" loading="lazy">
+            <div class="blog-info">
+                <h2>عنوان بلاگ ۳</h2>
+                <p>توضیح کوتاهی درباره این مطلب.</p>
+            </div>
+        </div>
         <div class="blog-tile">
             <img src="img/blog_1.png" alt="Blog 1" loading="lazy">
             <div class="blog-info">
@@ -105,22 +172,22 @@
     </div>
 
     <div class="navigation">
-        <div class="nav-circle" onclick="scrollToSection('banner1')" title="خانه" aria-label="خانه">
+        <div class="nav-circle" onclick="location.href='#banner'" title="خانه" aria-label="خانه">
             <i class="fas fa-home"></i>
         </div>
-        <div class="nav-circle" onclick="scrollToSection('contentSection1')" title="درباره‌ی ما" aria-label="درباره‌ی ما">
+        <div class="nav-circle" onclick="location.href='#contentSection1'" title="درباره‌ی ما" aria-label="درباره‌ی ما">
             <i class="fas fa-info-circle"></i>
         </div>
-        <div class="nav-circle" onclick="scrollToSection('contentSection2')" title="مزیت‌ها" aria-label="مزیت‌ها">
+        <div class="nav-circle" onclick="location.href='#contentSection2'" title="مزیت‌ها" aria-label="مزیت‌ها">
             <i class="fas fa-star"></i>
         </div>
-        <div class="nav-circle" onclick="scrollToSection('productsSection')" title="لیست محصولات" aria-label="لیست محصولات">
+        <div class="nav-circle" onclick="location.href='#productsSection'" title="لیست محصولات" aria-label="لیست محصولات">
             <i class="fas fa-box"></i>
         </div>
-        <div class="nav-circle" onclick="scrollToSection('blogSection')" title="وبلاگ" aria-label="وبلاگ">
+        <div class="nav-circle" onclick="location.href='#blogSection'" title="وبلاگ" aria-label="وبلاگ">
             <i class="fas fa-blog"></i>
         </div>
-        <div class="nav-circle" onclick="scrollToSection('contactSection')" title="تماس با ما" aria-label="تماس با ما">
+        <div class="nav-circle" onclick="location.href='#contactSection'" title="تماس با ما" aria-label="تماس با ما">
             <i class="fas fa-envelope"></i>
         </div>
     </div>
